# bite-size-notes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  build_exe.py  pyproject.toml  workflow.md
.claude/: settings.local.json
docs/: architecture.md  data-flow.md  platform-guide.md
packaging/hooks/: hook-ctranslate2.py  hook-faster_whisper.py  hook-llama_cpp.py  rthook_openmp.py
src/bite_size_notes/: __init__.py  __main__.py  app.py
src/bite_size_notes/audio/: capture.py  devices.py  mixer.py
src/bite_size_notes/gui/: chat_bubble.py  export_dialog.py  main_window.py  notes_panel.py  output_panel.py  settings_dialog.py  sidebar_panel.py  themes.py  transcript_view.py
src/bite_size_notes/models/: session_store.py  transcript.py
src/bite_size_notes/summarization/: engine.py
src/bite_size_notes/transcription/: engine.py  model_utils.py  worker.py
src/bite_size_notes/utils/: config.py  platform.py
