[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bite-size-notes"
version = "0.1.0"
description = "Meeting audio transcriber with live Whisper transcription"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "PySide6>=6.6,<7",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
"faster-whisper>=1.0.0",
    "pyaudiowpatch>=0.2.12; sys_platform == 'win32'",
    "llama-cpp-python>=0.3",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "pyinstaller>=6.0",
]

[project.scripts]
bite-size-notes = "bite_size_notes.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bite_size_notes"]

[[tool.uv.index]]
name = "llama-cpp-python-cpu"
url = "https://abetlen.github.io/llama-cpp-python/whl/cpu"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-python-cpu" }
